Added image to blender intro3d project

--- a/projects/blender/intro3d/index.html
+++ b/projects/blender/intro3d/index.html
@@ -19,8 +19,8 @@
 
     <!-- CSS
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/skeleton.css">
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/skeleton.css">
 
     <!-- Favicon
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -106,43 +106,15 @@ Note -  Please take note that the text is subject to change because of typograph
 
 
 
-          <h5>Gallery</h5>
-
-          <p><a href=https://github.com/alanhaugen/chess><img src="https://github.com/alanhaugen/chess/raw/master/output.gif"></a></p>
-          <p><a href=https://www.gamebrew.org/wiki/AE_Mini_Game_Collection><img src="images/Aeminigame6.png"></a></p>
-        </div>
-
         <!-- Side column
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-        <div class="one-third column portrait" style="margin-top: 25%">
-          <a href=cv.pdf><img src=images/cv.png style="width:50px"></a>
-          <a href=#publications><img src=images/publications.png style="width:50px"></a>
-          <a href=https://github.com/alanhaugen><img src=images/github-mark.png style="width:50px"></a>
-          <a href="mailto:alanhaugen@gmail.com"><img src=images/contact.png style="width:50px"></a>
-        </div>
       </div>
 
       <div class="row">
         <div class="two-thirds column">
 
-          <h5 id=publications>Publications</h5>
+		<img href="images/geometric-animations.jpg">
 
-          <a href=https://ntnuopen.ntnu.no/ntnu-xmlui/handle/11250/3037560>Expansion of bovine skeletal muscle cells in a lab-bench bioreactor using edible microcarriers made of eggshell membrane</a> Master thesis - NTNU 2022
-          </br>
-          <a href=https://ntnuopen.ntnu.no/ntnu-xmlui/handle/11250/2664006>Bruk av maskinsyn for automatisk telling og artsbestemmelse av villfisk som beiter under oppdrettsmerder</a> Bachelor thesis - NTNU 2020
-
-        </div>
-
-        <div class="one-third column portrait">
-          <h5>Find me.</h5>
-            <a href=https://kaggle.com/alanhaugen>kaggle.com/alanhaugen</a> 
-            </br>
-            <a href=https://github.com/alanhaugen>github.com/alanhaugen</a> 
-            </br>
-            <a href=https://linkedin.com/in/alanhaugen>linkedin.com/in/alanhaugen</a> 
-            </br>
-            <a href=https://twitter.com/alanwhaugen>twitter.com/alanwhaugen</a> 
-          </div>
         </div>
       </div>
     </div>
