Made link to intro3d project page

--- a/todo.html
+++ b/todo.html
@@ -221,7 +221,8 @@ website for each project?</h6>
 <li><label><input type="checkbox" checked="" />Oblig 3 -&gt;
 17-november-2023 #mathematics-I</label></li>
 <li><label><input type="checkbox" />Folder due -&gt; 1-december-2023
-#intro-3d</label></li>
+#intro-3d <a
+href="projects/blender/intro3d">projects/blender/intro3d</a></label></li>
 <li><label><input type="checkbox" />Written exam -&gt; 6-december-2023
 #programming-I</label></li>
 <li><label><input type="checkbox" />Written exam -&gt; 11-december-2023
