Fixed image src for blender intro3d project

--- a/projects/blender/intro3d/index.html
+++ b/projects/blender/intro3d/index.html
@@ -113,7 +113,7 @@ Note -  Please take note that the text is subject to change because of typograph
       <div class="row">
         <div class="two-thirds column">
 
-		<img href="images/geometric-animations.jpg">
+		<img src="images/geometric-animations.jpg">
 
         </div>
       </div>
