Added image and advert on youtube to intro3d project

--- a/projects/blender/intro3d/index.html
+++ b/projects/blender/intro3d/index.html
@@ -35,6 +35,10 @@
       <div class="row">
         <div class="two-thirds column" style="margin-top: 25%">
 
+		<img src="images/geometric-animations.jpg">
+
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/K783SDTBKmg?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
           <h4>Intro 3D Final Folder Assignment</h4>
 
 	  <p>Note : Final submission only in Inspera</p>
@@ -112,8 +116,6 @@ Note -  Please take note that the text is subject to change because of typograph
 
       <div class="row">
         <div class="two-thirds column">
-
-		<img src="images/geometric-animations.jpg">
 
         </div>
       </div>
