Washed clothes. Remember to buy detergent

--- a/todo.html
+++ b/todo.html
@@ -48,8 +48,8 @@
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
-<li><label><input type="checkbox" />Take washing out of washing
-machine</label></li>
+<li><label><input type="checkbox" />Buy detergent for
+clothes</label></li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls
 #atComputer #errands #office #atHome #agendas #read</h6>
@@ -59,6 +59,8 @@ id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-rem
 time. Revisit. Flag what needs to be done today. The battle is to
 remember what to do!</h6>
 <ul class="task-list">
+<li><label><input type="checkbox" checked="" />Take washing out of
+washing machine</label></li>
 <li><label><input type="checkbox" checked="" />Do weekly mathematics 42
 #mathematics</label></li>
 <li><label><input type="checkbox" checked="" />Do weekly mathematics 43
