Fixed formatting for intro3d

--- a/projects/blender/intro3d/index.html
+++ b/projects/blender/intro3d/index.html
@@ -72,39 +72,40 @@
 
 	  <p>Interactions could include: pushing, shooting, opening, climbing, throwing or anything else you would imagine doing in your game.</p>
 
-At least 2 ways of interacting with your scene has to be made from scratch using blueprints.
+	  <p>At least 2 ways of interacting with your scene has to be made from scratch using blueprints.</p>
 
-There should be a connection between some of your interactions and the objects or situations they apply to.
+	  <p>There should be a connection between some of your interactions and the objects or situations they apply to.</p>
 
-In addition to the ones you make yourself you may also import systems and blueprints found online.
+	  <p>In addition to the ones you make yourself you may also import systems and blueprints found online.</p>
 
-Make sure to credit all sources and clearly document what you did and did not make yourself in the reflection note. This includes tutorials and snippets of code found online as well as the assets directly imported to unreal.
+	  <p>Make sure to credit all sources and clearly document what you did and did not make yourself in the reflection note. This includes tutorials and snippets of code found online as well as the assets directly imported to unreal.</p>
 
-Proper lighting of the scene is also required.
-The inclusion of an animated character is optional and not mandatory.
+	  <p>Proper lighting of the scene is also required.</p>
+	  <p>The inclusion of an animated character is optional and not mandatory.</p>
 
  
 
-Deliverables:
+	  <h4>Deliverables:</h4>
 
-Part 1 - Game environment creation
+	  <p>Part 1 - Game environment creation</p>
 
-Assets with textures for the environment (Blend files & textures).
-Animated Game character with textures (Blend files & textures)
-SketchFab link for textured Game assets and character
-A completed optimized scene with animated character in Unreal including assets 
-A rendered walkthrough video footage in mp4 format with 1920 x 1080 pixels resolution
-A Reflection note with  minimum 500 words in PDF
-Part 2 - Interactive Game Environment
+	  <p>Assets with textures for the environment (Blend files &amp;
+ textures).</p>
+	  <p>Animated Game character with textures (Blend files &amp; textures)</p>
+	  <p>SketchFab link for textured Game assets and character</p>
+	  <p>A completed optimized scene with animated character in Unreal including assets </p>
+	  <p>A rendered walkthrough video footage in mp4 format with 1920 x 1080 pixels resolution</p>
+	  <p>A Reflection note with  minimum 500 words in PDF</p>
+	  <p>Part 2 - Interactive Game Environment</p>
 
-A completed optimized scene with blueprint interactions.
-Executable file of the unreal scene.
-A Reflection note with  minimum 250 words in PDF
-Submit your deliverable to Inspera on or before the deadline.
+	  <p>A completed optimized scene with blueprint interactions.</p>
+	  <p>Executable file of the unreal scene.</p>
+	  <p>A Reflection note with  minimum 250 words in PDF</p>
+	  <p>Submit your deliverable to Inspera on or before the deadline.</p>
 
-Do not use any  AI tools or other scripts (to makes the process automated) to complete any of the  tasks. 
+	  <p>Do not use any  AI tools or other scripts (to makes the process automated) to complete any of the  tasks. </p>
 
-Note -  Please take note that the text is subject to change because of typographical errors or/and other errors. If you find errors, contradictions or confusions - please contact the lecturers to clarify! All changes to the assignment text during the assignment period, will be announced on Canvas.
+	  <p>Note -  Please take note that the text is subject to change because of typographical errors or/and other errors. If you find errors, contradictions or confusions - please contact the lecturers to clarify! All changes to the assignment text during the assignment period, will be announced on Canvas.</p>
 
 
 
