Done week 43 maths

--- a/todo.html
+++ b/todo.html
@@ -73,7 +73,7 @@ Take washing out of washing machine</li>
 Do weekly mathematics 42 #mathematics</li>
 <li><input type="checkbox" disabled="" checked="" />
 Do weekly mathematics 43 #mathematics</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Do weekly mathematics 44 #mathematics</li>
 <li><input type="checkbox" disabled="" />
 Do weekly mathematics 45 #mathematics</li>
