Added go to art addicts to inbox

--- a/todo.html
+++ b/todo.html
@@ -49,17 +49,7 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
-Make a list of new assets for intro3d</li>
-<li><input type="checkbox" disabled="" />
-Do maths exam 20H</li>
-<li><input type="checkbox" disabled="" />
-Do maths exam 21H</li>
-<li><input type="checkbox" disabled="" />
-Do maths exam 22H</li>
-<li><input type="checkbox" disabled="" />
-Do maths exam kontV21</li>
-<li><input type="checkbox" disabled="" />
-Do maths exam kontV22</li>
+Go to art addicts</li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
@@ -77,6 +67,18 @@ Do weekly mathematics 43 #mathematics</li>
 Do weekly mathematics 44 #mathematics</li>
 <li><input type="checkbox" disabled="" />
 Do weekly mathematics 45 #mathematics</li>
+<li><input type="checkbox" disabled="" />
+Make a list of new assets for intro3d</li>
+<li><input type="checkbox" disabled="" />
+Do maths exam 20H</li>
+<li><input type="checkbox" disabled="" />
+Do maths exam 21H</li>
+<li><input type="checkbox" disabled="" />
+Do maths exam 22H</li>
+<li><input type="checkbox" disabled="" />
+Do maths exam kontV21</li>
+<li><input type="checkbox" disabled="" />
+Do maths exam kontV22</li>
 <li><input type="checkbox" disabled="" />
 Read Ekte programmering</li>
 <li><input type="checkbox" disabled="" checked="" />
