--- a/todo.html
+++ b/todo.html
@@ -50,6 +50,8 @@
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
 Go to art addicts</li>
+<li><input type="checkbox" disabled="" />
+Do weekly mathematics 46 #mathematics</li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
