Added pen purchase to inbox

--- a/todo.html
+++ b/todo.html
@@ -52,6 +52,8 @@
 Go to art addicts</li>
 <li><input type="checkbox" disabled="" />
 Do weekly mathematics 46 #mathematics</li>
+<li><input type="checkbox" disabled="" />
+Buy a blue and red pen</li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
