Crossed off doing week 46 in Mathematics

--- a/todo.html
+++ b/todo.html
@@ -56,8 +56,6 @@ time. Revisit. Flag what needs to be done today. The battle is to
 remember what to do!</h6>
 <ul class="task-list">
 <li><label><input type="checkbox" />Go to art addicts</label></li>
-<li><label><input type="checkbox" />Do weekly mathematics 46
-#mathematics</label></li>
 <li><label><input type="checkbox" checked="" />Buy detergent for
 clothes</label></li>
 <li><label><input type="checkbox" checked="" />Buy a blue and red
@@ -71,6 +69,8 @@ washing machine</label></li>
 <li><label><input type="checkbox" checked="" />Do weekly mathematics 44
 #mathematics</label></li>
 <li><label><input type="checkbox" />Do weekly mathematics 45
+#mathematics</label></li>
+<li><label><input type="checkbox" checked="" />Do weekly mathematics 46
 #mathematics</label></li>
 <li><label><input type="checkbox" />Make a list of new assets for
 intro3d</label></li>
