Crossed off Ulrik's lesson

--- a/todo.html
+++ b/todo.html
@@ -219,7 +219,7 @@ Ulrik lesson 1</li>
 Ulrik lesson 2</li>
 <li><input type="checkbox" disabled="" checked="" />
 Ulrik lesson 3</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Ulrik lesson 4</li>
 <li><input type="checkbox" disabled="" />
 Ulrik lesson 5</li>
