Made a list of assets to make

--- a/todo.html
+++ b/todo.html
@@ -47,6 +47,18 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
+<ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Make low-poly tree <a href="https://www.youtube.com/watch?v=y7PdiGXbrD0">https://www.youtube.com/watch?v=y7PdiGXbrD0</a></li>
+<li><input type="checkbox" disabled="" />
+Make low-poly flower <a href="https://www.youtube.com/watch?v=cxd-m7Tv3BM">https://www.youtube.com/watch?v=cxd-m7Tv3BM</a></li>
+<li><input type="checkbox" disabled="" />
+Make a bush <a href="https://www.youtube.com/watch?v=huvZkHTSHD8">https://www.youtube.com/watch?v=huvZkHTSHD8</a></li>
+<li><input type="checkbox" disabled="" />
+Make a platform</li>
+<li><input type="checkbox" disabled="" />
+Make a rock <a href="https://www.youtube.com/watch?v=pqlR30p9BmA">https://www.youtube.com/watch?v=pqlR30p9BmA</a></li>
+</ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
@@ -69,7 +81,7 @@ Do weekly mathematics 44 #mathematics</li>
 Do weekly mathematics 45 #mathematics</li>
 <li><input type="checkbox" disabled="" checked="" />
 Do weekly mathematics 46 #mathematics</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Make a list of new assets for intro3d</li>
 <li><input type="checkbox" disabled="" />
 Do maths exam 20H</li>
