Added another item to model

--- a/todo.html
+++ b/todo.html
@@ -57,6 +57,8 @@ Make a bush <a href="https://www.youtube.com/watch?v=huvZkHTSHD8">https://www.yo
 <li><input type="checkbox" disabled="" />
 Make a platform</li>
 <li><input type="checkbox" disabled="" />
+Make sub platforms <a href="https://www.youtube.com/watch?v=Qa107gT_nXc">https://www.youtube.com/watch?v=Qa107gT_nXc</a></li>
+<li><input type="checkbox" disabled="" />
 Make a rock <a href="https://www.youtube.com/watch?v=pqlR30p9BmA">https://www.youtube.com/watch?v=pqlR30p9BmA</a></li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
