Removed some items which I have completed. Thinking about what to add and in what order to do what

--- a/todo.html
+++ b/todo.html
@@ -49,10 +49,25 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
+Put hot water in bucket</li>
+<li><input type="checkbox" disabled="" />
+Put washing up liquid in hot water bucket</li>
+<li><input type="checkbox" disabled="" />
+Clean bathroom floor</li>
+<li><input type="checkbox" disabled="" />
+Clean bathroom walls</li>
+<li><input type="checkbox" disabled="" />
+Clean bathroom mirror</li>
+</ul>
+<h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
+<h1 id="action">Action</h1>
+<h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
+<ul class="task-list">
+<li><input type="checkbox" disabled="" checked="" />
 Make low-poly tree <a href="https://www.youtube.com/watch?v=y7PdiGXbrD0">https://www.youtube.com/watch?v=y7PdiGXbrD0</a></li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Make low-poly flower <a href="https://www.youtube.com/watch?v=cxd-m7Tv3BM">https://www.youtube.com/watch?v=cxd-m7Tv3BM</a></li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Make a bush <a href="https://www.youtube.com/watch?v=huvZkHTSHD8">https://www.youtube.com/watch?v=huvZkHTSHD8</a></li>
 <li><input type="checkbox" disabled="" />
 Make a platform</li>
@@ -60,19 +75,20 @@ Make a platform</li>
 Make sub platforms <a href="https://www.youtube.com/watch?v=Qa107gT_nXc">https://www.youtube.com/watch?v=Qa107gT_nXc</a></li>
 <li><input type="checkbox" disabled="" />
 Make a rock <a href="https://www.youtube.com/watch?v=pqlR30p9BmA">https://www.youtube.com/watch?v=pqlR30p9BmA</a></li>
-</ul>
-<h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
-<h1 id="action">Action</h1>
-<h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
-<ul class="task-list">
-<li><input type="checkbox" disabled="" checked="" />
-Go to art addicts</li>
-<li><input type="checkbox" disabled="" checked="" />
-Buy detergent for clothes</li>
-<li><input type="checkbox" disabled="" checked="" />
-Buy a blue and red pen</li>
-<li><input type="checkbox" disabled="" checked="" />
-Take washing out of washing machine</li>
+<li><input type="checkbox" disabled="" />
+Texture shroom #intro-3d</li>
+<li><input type="checkbox" disabled="" />
+Animate shroom #intro-3d</li>
+<li><input type="checkbox" disabled="" />
+Texture fish #intro-3d</li>
+<li><input type="checkbox" disabled="" />
+Animate fish #intro-3d</li>
+<li><input type="checkbox" disabled="" />
+Make carrot man as practice #intro-3d</li>
+<li><input type="checkbox" disabled="" />
+Make an intro for 3d folder #intro-3d</li>
+<li><input type="checkbox" disabled="" />
+Make sound effects for intro #intro-3d</li>
 <li><input type="checkbox" disabled="" checked="" />
 Do weekly mathematics 42 #mathematics</li>
 <li><input type="checkbox" disabled="" checked="" />
@@ -83,8 +99,8 @@ Do weekly mathematics 44 #mathematics</li>
 Do weekly mathematics 45 #mathematics</li>
 <li><input type="checkbox" disabled="" checked="" />
 Do weekly mathematics 46 #mathematics</li>
-<li><input type="checkbox" disabled="" checked="" />
-Make a list of new assets for intro3d</li>
+<li><input type="checkbox" disabled="" />
+Read Ekte programmering</li>
 <li><input type="checkbox" disabled="" />
 Do maths exam 20H</li>
 <li><input type="checkbox" disabled="" />
@@ -95,22 +111,8 @@ Do maths exam 22H</li>
 Do maths exam kontV21</li>
 <li><input type="checkbox" disabled="" />
 Do maths exam kontV22</li>
-<li><input type="checkbox" disabled="" />
-Read Ekte programmering</li>
 <li><input type="checkbox" disabled="" checked="" />
 Look into making assets for folder #intro-3d</li>
-<li><input type="checkbox" disabled="" />
-Texture shroom #intro-3d</li>
-<li><input type="checkbox" disabled="" />
-Animate shroom #intro-3d</li>
-<li><input type="checkbox" disabled="" />
-Texture fish #intro-3d</li>
-<li><input type="checkbox" disabled="" />
-Animate fish #intro-3d</li>
-<li><input type="checkbox" disabled="" />
-Make an intro for 3d folder #intro-3d</li>
-<li><input type="checkbox" disabled="" />
-Make sound effects for intro #intro-3d</li>
 <li><input type="checkbox" disabled="" />
 Consider Abbas mathematics notes #mathematics</li>
 <li><input type="checkbox" disabled="" />
@@ -120,11 +122,7 @@ Do Mock exam 2 #programming</li>
 <li><input type="checkbox" disabled="" />
 Do closed book exam 2022 #programming</li>
 <li><input type="checkbox" disabled="" />
-Buy superglue</li>
-<li><input type="checkbox" disabled="" />
 Read a book 20 minutes #recreation</li>
-<li><input type="checkbox" disabled="" />
-Make carrot man as practice #intro-3d</li>
 <li><input type="checkbox" disabled="" />
 Hand in first drawabox assignment</li>
 <li><input type="checkbox" disabled="" />
