Added picture of my intro scene to intro3d project materials

--- a/projects/blender/intro3d/index.html
+++ b/projects/blender/intro3d/index.html
@@ -37,6 +37,8 @@
 
 		<img src="images/geometric-animations.jpg">
 
+		<img src="images/unreal-geometry.png">
+
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/K783SDTBKmg?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
           <h4>Intro 3D Final Folder Assignment</h4>
