Checked off some item

--- a/todo.html
+++ b/todo.html
@@ -71,19 +71,19 @@ Make a bush <a href="https://www.youtube.com/watch?v=huvZkHTSHD8">https://www.yo
 Make a platform</li>
 <li><input type="checkbox" disabled="" />
 Make sub platforms <a href="https://www.youtube.com/watch?v=Qa107gT_nXc">https://www.youtube.com/watch?v=Qa107gT_nXc</a></li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Make a rock <a href="https://www.youtube.com/watch?v=pqlR30p9BmA">https://www.youtube.com/watch?v=pqlR30p9BmA</a></li>
 <li><input type="checkbox" disabled="" checked="" />
 Texture shroom #intro-3d</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Animate shroom #intro-3d</li>
 <li><input type="checkbox" disabled="" checked="" />
 Texture fish #intro-3d</li>
 <li><input type="checkbox" disabled="" />
-Animate fish #intro-3d</li>
+Animate fish #intro-3d (drop?)</li>
 <li><input type="checkbox" disabled="" />
 Make carrot man as practice #intro-3d</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Make an intro for 3d folder #intro-3d</li>
 <li><input type="checkbox" disabled="" />
 Make sound effects for intro #intro-3d</li>
