Done making platforms

--- a/todo.html
+++ b/todo.html
@@ -67,9 +67,9 @@ Make low-poly tree <a href="https://www.youtube.com/watch?v=y7PdiGXbrD0">https:/
 Make low-poly flower <a href="https://www.youtube.com/watch?v=cxd-m7Tv3BM">https://www.youtube.com/watch?v=cxd-m7Tv3BM</a></li>
 <li><input type="checkbox" disabled="" checked="" />
 Make a bush <a href="https://www.youtube.com/watch?v=huvZkHTSHD8">https://www.youtube.com/watch?v=huvZkHTSHD8</a></li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Make a platform</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Make sub platforms <a href="https://www.youtube.com/watch?v=Qa107gT_nXc">https://www.youtube.com/watch?v=Qa107gT_nXc</a></li>
 <li><input type="checkbox" disabled="" checked="" />
 Make a rock <a href="https://www.youtube.com/watch?v=pqlR30p9BmA">https://www.youtube.com/watch?v=pqlR30p9BmA</a></li>
