Made some more items to do

--- a/todo.html
+++ b/todo.html
@@ -47,19 +47,33 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
+<ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Get scenes running in sequence in unreal</li>
+<li><input type="checkbox" disabled="" />
+Improve models and make finer castles and houses</li>
+<li><input type="checkbox" disabled="" />
+Import platforms, can be used as stones with grass on top</li>
+</ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
+Texture carrot man</li>
+<li><input type="checkbox" disabled="" />
+Animate carrot man</li>
+<li><input type="checkbox" disabled="" />
+Make scene in unreal</li>
+<li><input type="checkbox" disabled="" checked="" />
 Put hot water in bucket</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Put washing up liquid in hot water bucket</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Clean bathroom floor</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Clean bathroom walls</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Clean bathroom mirror</li>
 <li><input type="checkbox" disabled="" checked="" />
 Make low-poly tree <a href="https://www.youtube.com/watch?v=y7PdiGXbrD0">https://www.youtube.com/watch?v=y7PdiGXbrD0</a></li>
@@ -81,7 +95,7 @@ Animate shroom #intro-3d</li>
 Texture fish #intro-3d</li>
 <li><input type="checkbox" disabled="" />
 Animate fish #intro-3d (drop?)</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Make carrot man as practice #intro-3d</li>
 <li><input type="checkbox" disabled="" checked="" />
 Make an intro for 3d folder #intro-3d</li>
