Moved inbox to actions, added add sign logic to actions

--- a/todo.html
+++ b/todo.html
@@ -47,18 +47,38 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
+<h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
+<h1 id="action">Action</h1>
+<h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Buy Ben Eater CPU kit</li>
+<li><input type="checkbox" disabled="" />
+Buy Ben Eater GPU kit</li>
+<li><input type="checkbox" disabled="" />
+Move left and right in Unreal</li>
+<li><input type="checkbox" disabled="" />
+Jump in Unreal</li>
+<li><input type="checkbox" disabled="" />
+Attack in Unreal</li>
+<li><input type="checkbox" disabled="" />
+Pickup flowers in Unreal</li>
+<li><input type="checkbox" disabled="" />
+Spawn powerups in Unreal</li>
+<li><input type="checkbox" disabled="" />
+Attack enemy in Unreal</li>
+<li><input type="checkbox" disabled="" />
+Take damage in Unreal</li>
 <li><input type="checkbox" disabled="" />
 Get scenes running in sequence in unreal</li>
 <li><input type="checkbox" disabled="" />
 Improve models and make finer castles and houses</li>
 <li><input type="checkbox" disabled="" />
 Import platforms, can be used as stones with grass on top</li>
-</ul>
-<h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
-<h1 id="action">Action</h1>
-<h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
-<ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Reimport tree assets converted to power by 2 textures</li>
+<li><input type="checkbox" disabled="" />
+Implement signs in unreal</li>
 <li><input type="checkbox" disabled="" />
 Texture carrot man</li>
 <li><input type="checkbox" disabled="" />
@@ -107,7 +127,7 @@ Do weekly mathematics 42 #mathematics</li>
 Do weekly mathematics 43 #mathematics</li>
 <li><input type="checkbox" disabled="" checked="" />
 Do weekly mathematics 44 #mathematics</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Do weekly mathematics 45 #mathematics</li>
 <li><input type="checkbox" disabled="" checked="" />
 Do weekly mathematics 46 #mathematics</li>
@@ -143,7 +163,7 @@ Consider Linear Algebra Done Right <a href="https://linear.axler.net">https://li
 Consider 50,000 feet (life), 40,000 feet (three/five year plan), 30,000 feet (one/two year plan), 20,2000 feet (My hats), 10,000 feet (Current projects) and Runway (actions)</li>
 <li><input type="checkbox" disabled="" />
 Write script to do Modern Graphics Programming files (currently on tut05 out of tut18), make it as an append and prepend comment option in solid #programming</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Play Alan Wake II</li>
 <li><input type="checkbox" disabled="" />
 Learn more about Fritz Haber</li>
@@ -243,7 +263,7 @@ Ulrik lesson 2</li>
 Ulrik lesson 3</li>
 <li><input type="checkbox" disabled="" checked="" />
 Ulrik lesson 4</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Ulrik lesson 5</li>
 <li><input type="checkbox" disabled="" />
 Write paper for mdpi</li>
