Pretending I have done a couple of items today

--- a/todo.html
+++ b/todo.html
@@ -63,13 +63,13 @@ Animate fish</li>
 Buy Ben Eater CPU kit</li>
 <li><input type="checkbox" disabled="" />
 Buy Ben Eater GPU kit</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Move left and right in Unreal</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Jump in Unreal</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Attack in Unreal</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Pickup flowers in Unreal</li>
 <li><input type="checkbox" disabled="" />
 Spawn powerups in Unreal</li>
@@ -77,17 +77,17 @@ Spawn powerups in Unreal</li>
 Attack enemy in Unreal</li>
 <li><input type="checkbox" disabled="" />
 Take damage in Unreal</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Get scenes running in sequence in unreal</li>
 <li><input type="checkbox" disabled="" />
 Improve models and make finer castles and houses</li>
 <li><input type="checkbox" disabled="" />
 Import platforms, can be used as stones with grass on top</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Reimport tree assets converted to power by 2 textures</li>
 <li><input type="checkbox" disabled="" />
 Implement signs in unreal</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Texture carrot man</li>
 <li><input type="checkbox" disabled="" />
 Animate carrot man</li>
