Checked off an item

--- a/todo.html
+++ b/todo.html
@@ -54,6 +54,16 @@ Buy labeler for post box</li>
 Make a machine exoskeleton for fish model</li>
 <li><input type="checkbox" disabled="" />
 Animate fish</li>
+<li><input type="checkbox" disabled="" />
+Game over state in unreal</li>
+<li><input type="checkbox" disabled="" />
+Pickup sword and discard sword</li>
+<li><input type="checkbox" disabled="" />
+Pickup club and discard club</li>
+<li><input type="checkbox" disabled="" />
+Attack with sword (in mouth?)</li>
+<li><input type="checkbox" disabled="" />
+Attack with club (in mouth?)</li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
@@ -71,7 +81,7 @@ Jump in Unreal</li>
 Attack in Unreal</li>
 <li><input type="checkbox" disabled="" checked="" />
 Pickup flowers in Unreal</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Spawn powerups in Unreal</li>
 <li><input type="checkbox" disabled="" />
 Attack enemy in Unreal</li>
