Added some items to inbox

--- a/todo.html
+++ b/todo.html
@@ -49,6 +49,19 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
+Double check naming convention</li>
+<li><input type="checkbox" disabled="" />
+Set UVs and textures for sword</li>
+<li><input type="checkbox" disabled="" />
+Upload models to sketchfab</li>
+<li><input type="checkbox" disabled="" />
+Display damage (flash of pain)</li>
+</ul>
+<h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
+<h1 id="action">Action</h1>
+<h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
+<ul class="task-list">
+<li><input type="checkbox" disabled="" />
 Buy labeler for post box</li>
 <li><input type="checkbox" disabled="" />
 Make a machine exoskeleton for fish model</li>
@@ -64,13 +77,8 @@ Pickup club and discard club</li>
 Attack with sword (in mouth?)</li>
 <li><input type="checkbox" disabled="" />
 Attack with club (in mouth?)</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Change all content to have names following unreal naming scheme <a href="https://docs.unrealengine.com/5.3/en-US/recommended-asset-naming-conventions-in-unreal-engine-projects/">https://docs.unrealengine.com/5.3/en-US/recommended-asset-naming-conventions-in-unreal-engine-projects/</a></li>
-</ul>
-<h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
-<h1 id="action">Action</h1>
-<h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
-<ul class="task-list">
 <li><input type="checkbox" disabled="" />
 Buy Ben Eater CPU kit</li>
 <li><input type="checkbox" disabled="" />
@@ -85,9 +93,9 @@ Attack in Unreal</li>
 Pickup flowers in Unreal</li>
 <li><input type="checkbox" disabled="" checked="" />
 Spawn powerups in Unreal</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Attack enemy in Unreal</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Take damage in Unreal</li>
 <li><input type="checkbox" disabled="" checked="" />
 Get scenes running in sequence in unreal</li>
@@ -97,13 +105,13 @@ Improve models and make finer castles and houses</li>
 Import platforms, can be used as stones with grass on top</li>
 <li><input type="checkbox" disabled="" checked="" />
 Reimport tree assets converted to power by 2 textures</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Implement signs in unreal</li>
 <li><input type="checkbox" disabled="" checked="" />
 Texture carrot man</li>
 <li><input type="checkbox" disabled="" />
 Animate carrot man</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Make scene in unreal</li>
 <li><input type="checkbox" disabled="" checked="" />
 Put hot water in bucket</li>
