--- a/todo.html
+++ b/todo.html
@@ -57,6 +57,7 @@ Upload models to sketchfab</li>
 <li><input type="checkbox" disabled="" />
 Display damage (flash of pain)</li>
 <li>[] Consider <a href="https://docs.unrealengine.com/5.3/en-US/blueprint-best-practices-in-unreal-engine/">https://docs.unrealengine.com/5.3/en-US/blueprint-best-practices-in-unreal-engine/</a></li>
+<li>[] Implement attack delay</li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
